# PyPiperTTS-win

./: LICENSE  README.md  pypipertts.py  pyproject.toml
